--- a/HelloWorldApp/app/build.gradle
+++ b/HelloWorldApp/app/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
+    namespace = "org.pytorch.helloworld"
     compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "34.0.0"
     defaultConfig {
         applicationId "org.pytorch.helloworld"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
